prov/shm: Add XPMEM support
Add XPMEM support as an HMEM subsystem.

The code flow is described below:

  - On SHM initialization initialize the XPMEM HMEM submodule
    - export the entire address space of the process via xpmem_make()
  - Indicate that local XPMEM capability is on if xpmem_make() is
    successful.
  - Whenever information is exchanged between peers, the XPMEM information
    is exchanged. The peers get the seg-id which is returned as part of
    xpmem_make() call. They then call xpmem_get() to get a 64-bit access
    permit ID. This will be used for the xpmem_attach()/xpmem_detach()
    to remote peer buffers.
  - On data operations, xpmem_attach() is called on the remote buffer.
     - this returns an address in the virtual address space of the current
       process.
  - memmove() operations can be called between the source and destination
    buffers.
  - The xpmem_attach()/xpmem_detach() go through the hmem caching system.
    This reduces the number of xpmem_attach()/xpmem_detach() operations
    which are expensive operations.
  - By default xpmem support is turned off. An environment variable:
    FI_USE_XPMEM is available to turn on xpmem support.
  - Based on Open MPI experimentation with XPMEM, it is observed that on
    some systems better performance can be obtained if memmove()
    operations are chunked up into smaller pieces.
    FI_XPMEM_MEMCPY_CHUNKSIZE environment variable is made available to
    tune this size. It defaults to XPMEM_DEFAULT_MEMCPY_CHUNK_SIZE
    (262144) bytes

This patch currently exports the entire address space of the process. It
is recognized that this is a vulnerability in the code. A future patch will
only export the region required for communication via memory registration.

Signed-off-by: Amir Shehata <shehataa@ornl.gov>
Signed-off-by: Alexia Ingerson <alexia.ingerson@intel.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -50,6 +50,7 @@ common_srcs =				\
 	src/hmem_ze.c			\
 	src/hmem_neuron.c		\
 	src/hmem_synapseai.c		\
+	src/hmem_xpmem.c		\
 	src/common.c			\
 	src/enosys.c			\
 	src/rbtree.c			\
@@ -156,6 +157,7 @@ util_fi_pingpong_LDADD = $(linkback)
 nodist_src_libfabric_la_SOURCES =
 src_libfabric_la_SOURCES =			\
 	include/ofi_hmem.h			\
+	include/ofi_xpmem.h			\
 	include/ofi.h				\
 	include/ofi_abi.h			\
 	include/ofi_atom.h			\
